# python-for-java-devs

./: .dockerignore  .gitignore  CHEATSHEET.md  CONTRIBUTING.md  LICENSE  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  content_request.md
.github/workflows/: ci.yml
00-setup-and-running/: README.md  hello.py  http_demo.py
01-python-essentials/: README.md  tour.py
01-python-essentials/exercises/: README.md  ex01_fstrings.py  ex01_match.py  ex01_truthiness.py
01-python-essentials/tests/: conftest.py  test_tour.py
02-collections-and-comprehensions/: README.md  collections_demo.py
02-collections-and-comprehensions/exercises/: README.md  ex02_comprehension.py  ex02_dict_zip.py  ex02_pipeline.py
02-collections-and-comprehensions/tests/: test_collections.py
03-functions-and-decorators/: README.md  decorators.py
03-functions-and-decorators/exercises/: README.md  ex03_cached.py  ex03_forwarding.py  ex03_mutable_default.py
03-functions-and-decorators/tests/: conftest.py  test_decorators.py
04-oop-classes-and-protocols/: README.md  notifiers.py
04-oop-classes-and-protocols/exercises/: README.md  ex04_dataclass.py  ex04_property.py  ex04_protocol.py
04-oop-classes-and-protocols/tests/: test_notifiers.py
05-errors-and-context-managers/: README.md  db_client.py
05-errors-and-context-managers/exercises/: README.md  ex05_config_error.py  ex05_suppress.py  ex05_timer.py
05-errors-and-context-managers/tests/: test_db_client.py
06-async-and-concurrency/: README.md  async_fetch.py
06-async-and-concurrency/exercises/: README.md  ex06_blocking.py  ex06_gather.py  ex06_timeout.py
06-async-and-concurrency/tests/: test_async_fetch.py
07-real-project-uv-pytest-mypy/: README.md  debugging_demo.py
07-real-project-uv-pytest-mypy/tests/: conftest.py  test_textutils.py
08-fastapi-crud/: README.md  tasks_app.py  tasks_router.py  tasks_schemas.py  tasks_store.py
08-fastapi-crud/exercises/: README.md  ex08_app.py  ex08_router.py  ex08_schemas.py  ex08_store.py
08-fastapi-crud/tests/: conftest.py  test_tasks_api.py
09-fastapi-pro-di-auth-config/: .env.example  README.md
09-fastapi-pro-di-auth-config/exercises/: README.md  ex09_config.py  ex09_errors.py  ex09_router.py
09-fastapi-pro-di-auth-config/secureapp/: __init__.py  auth_router.py  config.py  dependencies.py  errors.py  main.py  middleware.py  schemas.py  security.py  stores.py  tasks_router.py
09-fastapi-pro-di-auth-config/tests/: conftest.py  test_auth_api.py  test_secured_tasks_api.py
10-persistence-sqlalchemy-alembic/: .env.example  README.md  alembic.ini  docker-compose.yml
10-persistence-sqlalchemy-alembic/alembic/: env.py
10-persistence-sqlalchemy-alembic/exercises/: README.md  ex10_repository.py  ex10_search.py
10-persistence-sqlalchemy-alembic/persistapp/: __init__.py  config.py  database.py  main.py  models.py  repository.py  router.py  schemas.py
10-persistence-sqlalchemy-alembic/tests/: conftest.py  test_task_repository.py  test_tasks_db_api.py
11-project-architecture/: .env.example  README.md  alembic.ini  docker-compose.yml
11-project-architecture/alembic/: env.py
11-project-architecture/app/: __init__.py  dependencies.py  main.py
11-project-architecture/exercises/: README.md  ex11_app.py  ex11_books.py  ex11_dependencies.py  ex11_repository.py  ex11_router.py  ex11_schemas.py  ex11_service.py
11-project-architecture/tests/: conftest.py  test_layered_api.py  (+2 more)
12-advanced-testing/: README.md  notify.py
13-ai-llms-rag-agents/: 01_raw_sdk.py  02_langchain_lcel.py  03_rag_pgvector.py  04_langgraph_agent.py  05_mcp_tools.py  06_agent_endpoint.py  README.md  docker-compose.yml  provider.py
14-production-docker-ci/: Dockerfile  README.md  docker-compose.yml
scripts/: verify-solutions.sh
(+100 files in other folders)
