[project]
name = "python-for-java-devs"
version = "0.1.0"
description = "Python for senior Java developers: runnable, Java-anchored modules from zero to FastAPI in production."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
# Default install = fundamentals arc (modules 00–07). httpx is the only
# third-party import there (HTTP demos in 00-setup-and-running and
# 06-async-and-concurrency). Everything else lives in a group below.
dependencies = [
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "testcontainers[postgres]>=4.5",
]
# Web arc (modules 08–12, 14): uv sync --group web
web = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pyjwt>=2.8",
    "pwdlib[argon2]>=0.2",
    "python-multipart>=0.0.9",
    "httpx2>=2.7.0",
    "structlog>=24.1",
    "gunicorn>=26.0.0",
]
# AI module (13): uv sync --group web --group ai (needs the web group too —
# its agent endpoint uses FastAPI) or uv sync --all-groups
ai = [
    "openai>=2.47.0",
    "anthropic>=0.118.0",
    "langchain>=1.3.14",
    "langchain-openai>=1.4.0",
    "langchain-anthropic>=1.5.0",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "pgvector>=0.5.0",
    "mcp>=1.28.1",
]

# This repo is a teaching project, not a publishable package.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# E/W: pycodestyle · F: pyflakes · I: import sorting · UP: pyupgrade · B: bugbear
select = ["E", "W", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = [
    "00-setup-and-running",
    "01-python-essentials",
    "02-collections-and-comprehensions",
    "03-functions-and-decorators",
    "04-oop-classes-and-protocols",
    "05-errors-and-context-managers",
    "06-async-and-concurrency",
    "07-real-project-uv-pytest-mypy/src",
    "08-fastapi-crud",
    "09-fastapi-pro-di-auth-config",
    "10-persistence-sqlalchemy-alembic",
    "11-project-architecture",
    "12-advanced-testing",
    "13-ai-llms-rag-agents",
    "14-production-docker-ci",
]
# Strict where it pays off, pragmatic where it doesn't.
disallow_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
exclude = "/tests/|/alembic/|/exercises/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "slow: tests that take a while — deselect with -m 'not slow'",
    "postgres: tests requiring a running PostgreSQL — skip automatically when unreachable (see 10-persistence-sqlalchemy-alembic/)",
    "docker: tests using testcontainers — skip automatically when no Docker daemon is reachable (see 12-advanced-testing/)",
]
testpaths = [
    "01-python-essentials/tests",
    "02-collections-and-comprehensions/tests",
    "03-functions-and-decorators/tests",
    "04-oop-classes-and-protocols/tests",
    "05-errors-and-context-managers/tests",
    "06-async-and-concurrency/tests",
    "07-real-project-uv-pytest-mypy/tests",
    "08-fastapi-crud/tests",
    "09-fastapi-pro-di-auth-config/tests",
    "10-persistence-sqlalchemy-alembic/tests",
    "11-project-architecture/tests",
    "12-advanced-testing/tests",
    "13-ai-llms-rag-agents/tests",
    "14-production-docker-ci/tests",
]

[tool.coverage.run]
# What JaCoCo's <includes> would say: measure the production app, not tests.
source = ["11-project-architecture/app"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
